<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2023 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="sharkparts_title">Black Shark settings</string>
    <string name="sharkparts_summary">Additional device specific tweaks</string>

    <!-- S Logo -->
    <string name="logo_control_title">Rear LED</string>
    <string name="logo_control_mode_title">Mode</string>
    <string name="logo_control_enable_title">Enabled</string>
    <string name="logo_control_summary">Change the behaviour of rear LED logo</string>
    <string name="logo_control_breath_title">Breathing RGB</string>
    <string name="logo_control_manual_title">Manual</string>
    <string name="logo_control_mono_breath_title">Mono Breathing</string>
    <string name="logo_control_intensity_title_red">Red</string>
    <string name="logo_control_intensity_title_green">Green</string>
    <string name="logo_control_intensity_title_blue">Blue</string>
</resources>
