<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.

     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/logo_control_title">

    <com.android.settingslib.widget.MainSwitchPreference
        android:defaultValue="false"
        android:key="logo_control_enable"
        android:title="@string/logo_control_enable_title" />

    <ListPreference
        android:key="logo_control_mode"
        android:title="@string/logo_control_mode_title"
        android:entries="@array/logo_control_mode_entries"
        android:entryValues="@array/logo_control_mode_values"
        android:dependency="logo_control_enable" />

    <SeekBarPreference
        android:key="logo_control_manual_red"
        android:title="@string/logo_control_intensity_title_red"
        android:min="0"
        android:max="255"
        android:persistent="false"
        android:dependency="logo_control_enable" />
    <SeekBarPreference
        android:key="logo_control_manual_green"
        android:title="@string/logo_control_intensity_title_green"
        android:min="0"
        android:max="255"
        android:persistent="false"
        android:dependency="logo_control_enable" />
    <SeekBarPreference
        android:key="logo_control_manual_blue"
        android:title="@string/logo_control_intensity_title_blue"
        android:min="0"
        android:max="255"
        android:persistent="false"
        android:dependency="logo_control_enable" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/BreathButtons"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <ImageButton
        android:id="@+id/BreathButtonRed"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/BreathButtonGreen"
        android:src="@drawable/roundedbutton"
        android:padding="25dp"
        app:tint="#FF0000" />
    <ImageButton
        android:id="@+id/BreathButtonGreen"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_margin="10dp"
        android:layout_centerInParent="true"
        android:padding="25dp"
        android:src="@drawable/roundedbutton"
        app:tint="#00FF00" />
    <ImageButton
        android:id="@+id/BreathButtonBlue"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/BreathButtonGreen"
        android:src="@drawable/roundedbutton"
        android:padding="25dp"
        app:tint="#0022FF" />
    </RelativeLayout>
</PreferenceScreen>
